fix: Change RECAP API-endpoints and service methods to fetch answers by a given luckyId